--- a/davie.html
+++ b/davie.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Emotional Toys — Fob</title>
-  <meta name="description" content="Emotional Toys — fob" />
+  <title>Emotional Toys — Davie</title>
+  <meta name="description" content="Emotional Toys — davie" />
 
   <style>
     :root{
@@ -226,7 +226,7 @@
 
       <nav aria-label="Primary navigation">
         <a href="dot.html">dot</a>
-        <a href="fob.html">fob</a>
+        <a href="davie.html">davie</a>
         <a href="letty.html">letty</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
@@ -239,21 +239,21 @@
   <main>
     <section class="hero">
       <div class="wrap heroCard">
-        <h1>Fob — The caring pocket pal.</h1>
-        <p>Fob is compact and comforting, built for portability and quick check-ins with warm, low-friction interaction.</p>
+        <h1>Davie — The enhanced plush companion.</h1>
+        <p>Davie is your personal companion, built for highly-engaging and complex interactions--ideal for gentle emotional assurances throughout the day.</p>
       </div>
     </section>
 
     <section class="content">
       <div class="wrap grid">
-        <div class="ovalFrame" style="--img: url('assets/fob.jpg'); --img-pos: 50% 45%;">
-          <img src="assets/fob.jpg" alt="Fob companion" />
+        <div class="ovalFrame" style="--img: url('assets/davie.jpg'); --img-pos: 50% 45%;">
+          <img src="assets/davie.jpg" alt="Davie companion" />
         </div>
         <div class="panel">
           <h2>Highlights</h2>
-          <p>Fob is compact and comforting, built for portability and quick check-ins with warm, low-friction interaction.</p>
+          <p>Davie is your personal companion, built for highly-engaging and complex interactions--ideal for gentle emotional assurances throughout the day.</p>
           
-          <div class="pillRow"><span class="pill">Pocket companion</span><span class="pill">Warm feedback</span><span class="pill">Quick interactions</span><span class="pill">Low-friction</span></div>
+          <div class="pillRow"><span class="pill">Enhanced companion</span><span class="pill">Warm feedback</span><span class="pill">Quick interactions</span><span class="pill">Low-friction</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-primary" href="index.html">Shop</a>
             <a class="btn btn-ghost" href="index.html">Back to Home</a>
