--- a/letty.html
+++ b/letty.html
@@ -226,7 +226,7 @@
 
       <nav aria-label="Primary navigation">
         <a href="dot.html">dot</a>
-        <a href="fob.html">fob</a>
+        <a href="davie.html">davie</a>
         <a href="letty.html">letty</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
