--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
             </div>
             <div class="cardBody">
               <h3 class="cardName">letty</h3>
-              <p class="cardTag">The robotic fawn companion.</p>
+              <p class="cardTag">The robotic adaptive fawn.</p>
               <div class="cardActions">
                 <button class="btn btn-primary btn-wide" data-open="letty">LEARN MORE</button>
               </div>
@@ -1148,7 +1148,7 @@
       },
       letty: {
         title: "letty",
-        copy: "Letty is a robotic fawn with a gentle, affectionate presence—designed to encourage calm routines and emotional connection.",
+        copy: "Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.",
         pills: ["Robotic fawn", "Affectionate", "Gentle prompts", "Soft aesthetic"],
         art: document.querySelector('[data-open="letty"] .ovalFrame').outerHTML
       }
