--- a/letty.html
+++ b/letty.html
@@ -239,8 +239,8 @@
   <main>
     <section class="hero">
       <div class="wrap heroCard">
-        <h1>Letty — The robotic fawn companion.</h1>
-        <p>Letty is a robotic fawn with a gentle, affectionate presence—encouraging calm routines and emotional connection.</p>
+        <h1>Letty — The robotic adaptive fawn.</h1>
+        <p>Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.</p>
       </div>
     </section>
 
@@ -251,7 +251,7 @@
         </div>
         <div class="panel">
           <h2>Highlights</h2>
-          <p>Letty is a robotic fawn with a gentle, affectionate presence—encouraging calm routines and emotional connection.</p>
+          <p>Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.</p>
           
           <div class="pillRow"><span class="pill">Robotic fawn</span><span class="pill">Affectionate</span><span class="pill">Gentle prompts</span><span class="pill">Soft aesthetic</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
