Adjust banner text

--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,8 @@
 
         <div class="ctaBanner">
           <div class="ctaInner">
-            <h3>Experience the Future of Emotional AI</h3>
-            <p>Bring home a companion that learns your patterns and responds with supportive interaction.</p>
+            <h3>Experience the Future of Interactive Machine Intelligence</h3>
+            <p>Bring home a companion that learns your patterns and responds with supportive and intuitive interactions.</p>
             <button class="btn btn-primary btn-wide" id="buyNowBottom">ORDER NOW</button>
           </div>
         </div>
