Minor textual mods

--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
       letty: {
         title: "letty",
         copy: "Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.",
-        pills: ["Robotic fawn", "Affectionate", "Gentle prompts", "Soft aesthetic"],
+        pills: ["Work ethic", "Affectionate", "Gentle prompts", "Soft aesthetic"],
         art: document.querySelector('[data-open="letty"] .ovalFrame').outerHTML
       }
     };
