--- a/letty.html
+++ b/letty.html
@@ -253,7 +253,7 @@
           <h2>Highlights</h2>
           <p>Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.</p>
           
-          <div class="pillRow"><span class="pill">Robotic fawn</span><span class="pill">Affectionate</span><span class="pill">Gentle prompts</span><span class="pill">Soft aesthetic</span></div>
+          <div class="pillRow"><span class="pill">Work ethic</span><span class="pill">Affectionate</span><span class="pill">Gentle prompts</span><span class="pill">Soft aesthetic</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-primary" href="index.html">Shop</a>
             <a class="btn btn-ghost" href="index.html">Back to Home</a>
