--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light dark" />
   <title>Emotional Toys — Interactive Emotional Companions</title>
-  <meta name="description" content="Machine-intelligent toys that feel and connect with you." />
+  <meta name="description" content="Machine-intelligent toys that feel and connect with you. Portable, energy-efficient companions with emotive personalities designed for meaningful interactions and the ability to perform useful work." />
 
   
 <style>
@@ -890,7 +890,7 @@
           <div class="heroGrid">
             <div>
               <h1>Interactive Emotional Companions</h1>
-              <p>Machine-intelligent toys that feel and connect with you. Portable companions with emotive personalities designed for meaningful interactions.</p>
+              <p>Machine-intelligent toys that feel and connect with you. Portable, energy-efficient companions with emotive personalities designed for meaningful interactions and the ability to perform useful work.</p>
               <div class="heroButtons">
                 <button class="btn btn-ghost" id="heroLearn">LEARN MORE</button>
               </div>
