--- a/pages/about.html
+++ b/pages/about.html
@@ -219,7 +219,7 @@
 <body>
   <header>
     <div class="wrap topbar">
-      <a class="brand" href="index.html" aria-label="Emotional Toys Home">
+      <a class="brand" href="../index.html" aria-label="Emotional Toys Home">
         <div class="mark" aria-hidden="true"></div>
         <span>emotional toys</span>
       </a>
@@ -232,7 +232,7 @@
         <a href="contact.html">contact</a>
       </nav>
 
-      <a class="btn btn-ghost" href="index.html">Back</a>
+      <a class="btn btn-ghost" href="../index.html">Back</a>
     </div>
   </header>
 
@@ -247,15 +247,15 @@
     <section class="content">
       <div class="wrap grid">
         <div class="ovalFrame" style="--img: url('assets/luminous-orb.jpg'); --img-pos: 50% 0%;">
-          <img src="assets/luminous-orb.jpg" alt="About companion" />
+          <img src="../assets/luminous-orb.jpg" alt="About companion" />
         </div>
         <div class="panel">
                     <p>We build companions designed for warmth, presence, and continuity. Each character is crafted to feel responsive, gentle, and supportive over time.</p>
           
           <div class="pillRow"><span class="pill">Human-centered</span><span class="pill">Emotionally-aware</span><span class="pill">Privacy-aware</span><span class="pill">Designed for trust</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-primary" href="index.html">Shop</a>
-            <a class="btn btn-ghost" href="index.html">Back to Home</a>
+            <a class="btn btn-primary" href="../index.html">Shop</a>
+            <a class="btn btn-ghost" href="../index.html">Back to Home</a>
           </div>
         </div>
       </div>
