--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Emotional Toys — Dot</title>
-  <meta name="description" content="Emotional Toys — dot" />
+  <title>Emotional Toys — Contact</title>
+  <meta name="description" content="Emotional Toys — contact" />
 
   <style>
     :root{
@@ -219,7 +219,7 @@
 <body>
   <header>
     <div class="wrap topbar">
-      <a class="brand" href="index.html" aria-label="Emotional Toys Home">
+      <a class="brand" href="../index.html" aria-label="Emotional Toys Home">
         <div class="mark" aria-hidden="true"></div>
         <span>emotional toys</span>
       </a>
@@ -232,31 +232,30 @@
         <a href="contact.html">contact</a>
       </nav>
 
-      <a class="btn btn-ghost" href="index.html">Back</a>
+      <a class="btn btn-ghost" href="../index.html">Back</a>
     </div>
   </header>
 
   <main>
     <section class="hero">
       <div class="wrap heroCard">
-        <h1>Dot — Curious, observant, and responsive.</h1>
-        <p>Dot is designed to feel like a small, steady presence—reacting to attention, learning patterns, and offering calm feedback throughout your day.</p>
+        <h1>Contact</h1>
+        <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
       </div>
     </section>
 
     <section class="content">
       <div class="wrap grid">
-        <div class="ovalFrame" style="--img: url('assets/dot.jpg'); --img-pos: 50% 45%;">
-          <img src="assets/dot.jpg" alt="Dot companion" />
+        <div class="ovalFrame" style="--img: url('assets/contact.jpeg'); --img-pos: 50% 45%;">
+          <img src="../assets/contact.jpeg" alt="Contact companion" />
         </div>
         <div class="panel">
-          <h2>Highlights</h2>
-          <p>Dot is designed to feel like a small, steady presence—reacting to attention, learning patterns, and offering calm feedback throughout your day.</p>
-          
-          <div class="pillRow"><span class="pill">Curious personality</span><span class="pill">Expressive eyes</span><span class="pill">Adaptive routines</span><span class="pill">Calm presence</span></div>
+                    <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
+          <p><strong>Email:</strong> toys@ratio.club</p>
+          <div class="pillRow"><span class="pill">Get in touch</span><span class="pill">Press kit available</span><span class="pill">Partnerships</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-primary" href="index.html">Shop</a>
-            <a class="btn btn-ghost" href="index.html">Back to Home</a>
+            <a class="btn btn-primary" href="../index.html">Shop</a>
+            <a class="btn btn-ghost" href="../index.html">Back to Home</a>
           </div>
         </div>
       </div>
