--- a/pages/letty.html
+++ b/pages/letty.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Emotional Toys — Contact</title>
-  <meta name="description" content="Emotional Toys — contact" />
+  <title>Emotional Toys — Letty</title>
+  <meta name="description" content="Emotional Toys — letty" />
 
   <style>
     :root{
@@ -219,7 +219,7 @@
 <body>
   <header>
     <div class="wrap topbar">
-      <a class="brand" href="index.html" aria-label="Emotional Toys Home">
+      <a class="brand" href="../index.html" aria-label="Emotional Toys Home">
         <div class="mark" aria-hidden="true"></div>
         <span>emotional toys</span>
       </a>
@@ -232,30 +232,31 @@
         <a href="contact.html">contact</a>
       </nav>
 
-      <a class="btn btn-ghost" href="index.html">Back</a>
+      <a class="btn btn-ghost" href="../index.html">Back</a>
     </div>
   </header>
 
   <main>
     <section class="hero">
       <div class="wrap heroCard">
-        <h1>Contact</h1>
-        <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
+        <h1>Letty — The robotic adaptive fawn.</h1>
+        <p>Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.</p>
       </div>
     </section>
 
     <section class="content">
       <div class="wrap grid">
-        <div class="ovalFrame" style="--img: url('assets/contact.jpeg'); --img-pos: 50% 45%;">
-          <img src="assets/contact.jpeg" alt="Contact companion" />
+        <div class="ovalFrame" style="--img: url('assets/letty-09.jpg'); --img-pos: 50% 45%;">
+          <img src="../assets/letty-09.jpg" alt="Letty companion" />
         </div>
         <div class="panel">
-                    <p>Questions, partnerships, or press inquiries—reach out and we’ll get back to you soon.</p>
-          <p><strong>Email:</strong> toys@ratio.club</p>
-          <div class="pillRow"><span class="pill">Get in touch</span><span class="pill">Press kit available</span><span class="pill">Partnerships</span></div>
+          <h2>Highlights</h2>
+          <p>Letty is a robotic fawn with a gentle, affectionate presence - mobile and strong.</p>
+          
+          <div class="pillRow"><span class="pill">Work ethic</span><span class="pill">Affectionate</span><span class="pill">Gentle prompts</span><span class="pill">Soft aesthetic</span></div>
           <div style="margin-top: 14px; display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-primary" href="index.html">Shop</a>
-            <a class="btn btn-ghost" href="index.html">Back to Home</a>
+            <a class="btn btn-primary" href="../index.html">Shop</a>
+            <a class="btn btn-ghost" href="../index.html">Back to Home</a>
           </div>
         </div>
       </div>
