--- a/index.html
+++ b/index.html
@@ -855,11 +855,11 @@
       </a>
 
       <nav aria-label="Primary navigation">
-        <a href="dot.html">dot</a>
-        <a href="davie.html">davie</a>
-        <a href="letty.html">letty</a>
-        <a href="about.html">about</a>
-        <a href="contact.html">contact</a>
+        <a href="pages/dot.html">dot</a>
+        <a href="pages/davie.html">davie</a>
+        <a href="pages/letty.html">letty</a>
+        <a href="pages/about.html">about</a>
+        <a href="pages/contact.html">contact</a>
       </nav>
 
       <div class="cta">
@@ -1082,8 +1082,8 @@
       <div class="wrap foot">
         <div>© 2016 - <span id="year"></span> cartheur. All rights reserved.</div>
         <div style="display:flex; gap:14px; flex-wrap:wrap;">
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="pages/about.html">About</a>
+          <a href="pages/contact.html">Contact</a>
           <a href="#top">Back to top</a>
         </div>
       </div>
@@ -1120,11 +1120,11 @@
       </div>
       <div class="modalBody" style="grid-template-columns: 1fr;">
         <div style="display:grid; gap:10px;">
-          <a class="btn btn-ghost" href="dot.html">dot</a>
-          <a class="btn btn-ghost" href="davie.html">davie</a>
-          <a class="btn btn-ghost" href="letty.html">letty</a>
-          <a class="btn btn-ghost" href="about.html">about</a>
-          <a class="btn btn-ghost" href="contact.html">contact</a>
+          <a class="btn btn-ghost" href="pages/dot.html">dot</a>
+          <a class="btn btn-ghost" href="pages/davie.html">davie</a>
+          <a class="btn btn-ghost" href="pages/letty.html">letty</a>
+          <a class="btn btn-ghost" href="pages/about.html">about</a>
+          <a class="btn btn-ghost" href="pages/contact.html">contact</a>
           <button class="btn btn-primary" id="menuBuy">ORDER NOW</button>
         </div>
       </div>
