--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="color-scheme" content="light dark" />
   <title>Emotional Toys — Interactive Emotional Companions</title>
   <meta name="description" content="Machine-intelligent toys that feel and connect with you. Portable, energy-efficient companions with emotive personalities designed for meaningful interactions and the ability to perform useful work." />
+  <link rel="icon" href="assets/toys.ico" sizes="any" />
 
   
 <style>
