--- a/index.html
+++ b/index.html
@@ -204,32 +204,16 @@
     }
     .brand .mark{
       width: 34px; height: 34px;
-      border-radius: 12px;
-      background:
-        conic-gradient(from 210deg, rgba(255,255,255,.18), rgba(255,255,255,0) 25%, rgba(255,255,255,.22) 60%, rgba(255,255,255,0) 100%),
-        radial-gradient(12px 12px at 35% 35%, rgba(255,255,255,.9), rgba(255,255,255,0) 55%),
-        linear-gradient(135deg, #5a7bff, #8a5bff);
-      box-shadow: 0 10px 25px rgba(91,91,232,.18);
+      border-radius: 8px;
+      background: url("assets/toys.png") center / contain no-repeat;
+      box-shadow: none;
       position: relative;
     }
     .brand .mark:before{
-      content:"";
-      position: absolute; inset: 8px 9px 10px 9px;
-      border-radius: 999px 999px 18px 18px;
-      background: rgba(255,255,255,.92);
-      transform: rotate(-8deg);
-      clip-path: path("M 10 6 C 10 2 7 0 5 0 C 3 0 0 2 0 6 C 0 10 5 12 5 12 C 5 12 10 10 10 6 Z");
-      /* fallback: if clip-path path unsupported, it still looks like a blob */
+      content: none;
     }
     .brand .mark:after{
-      content:"";
-      position: absolute;
-      inset: 6px;
-      border-radius: 10px;
-      border: 1px solid rgba(255,255,255,.45);
-      box-shadow: inset 0 0 0 1px rgba(255,255,255,.08);
-      mix-blend-mode: screen;
-      pointer-events: none;
+      content: none;
     }
     .brand span{ font-size: 18px; }
     nav{
