--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@
               <h3 class="cardName">dot</h3>
               <p class="cardTag">The curious little robot.</p>
               <div class="cardActions">
-                <button class="btn btn-primary btn-wide" data-open="dot">LEARN MORE</button>
+                <button class="btn btn-primary btn-wide" data-open="dot">BELIEVE</button>
               </div>
             </div>
           </article>
@@ -1004,7 +1004,7 @@
               <h3 class="cardName">davie</h3>
               <p class="cardTag">The enhanced plush companion.</p>
               <div class="cardActions">
-                <button class="btn btn-primary btn-wide" data-open="davie">LEARN MORE</button>
+                <button class="btn btn-primary btn-wide" data-open="davie">NEED</button>
               </div>
             </div>
           </article>
@@ -1019,7 +1019,7 @@
               <h3 class="cardName">letty</h3>
               <p class="cardTag">The robotic adaptive fawn.</p>
               <div class="cardActions">
-                <button class="btn btn-primary btn-wide" data-open="letty">LEARN MORE</button>
+                <button class="btn btn-primary btn-wide" data-open="letty">UNDERSTAND</button>
               </div>
             </div>
           </article>
