--- a/index.html
+++ b/index.html
@@ -1303,10 +1303,8 @@
 
     <footer>
       <div class="wrap foot">
-        <div>© 2016 - <span id="year"></span> cartheur. All rights reserved.</div>
+        <div>© 2016 - <span id="year"></span> <a href="https://cartheur.com" target="_blank" rel="noreferrer">cartheur</a>. All rights reserved.</div>
         <div style="display:flex; gap:14px; flex-wrap:wrap;">
-          <a href="#about">About</a>
-          <a href="#contact">Contact</a>
           <a href="#top">Back to top</a>
         </div>
       </div>
